--- a/_locales/zh_CN/messages.json
+++ b/_locales/zh_CN/messages.json
@@ -1,5 +1,5 @@
 {
   "appName": { "message": "Chrome浏览器截图工具" },
-  "appDescription": { "message": "一款带你十分钟入门Chrome插件开发的基础demo" },
+  "appDescription": { "message": "制作一个简单的浏览器截图工具，方便未登录截图工具时使用" },
   "helloWorld": { "message": "Hello World" }
 }
